# domes

./: .clang-format  .clangd  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPER_QUICKSTART.md  JLCPCB_PARTS_LIST.csv  MULTI_DEVICE_PLAN.md  PLAN.md  README.md  SYSTEM_ARCHITECTURE.md
.claude/: PLATFORM.md  settings.json
.claude/commands/: erase-flash.md  firmware.md  flash.md  lint-fw.md  monitor.md  new-driver.md  size.md  test-ble.md  test-espnow.md  test-imu.md  test-leds.md  test-touch.md  validate-hw.md
.claude/skills/: firmware-coder.md
.codex/: PLATFORM.md
.github/workflows/: firmware-ci.yml  firmware-hw-test.yml  firmware-release.yml  test.yml
docs/: PIN_REFERENCE.md
firmware/: AGENTS.md  CLAUDE.md  CMakeLists.host.txt  CMakeLists.txt  GUIDELINES.md  MILESTONES.md  README.md  partitions.csv  run_tests.sh  sdkconfig.defaults  setup.sh  test-serial-ota.sh
firmware/common/: CMakeLists.txt
firmware/common/interfaces/: iTransport.hpp  result.hpp
firmware/common/proto/: config.options  config.pb.c  config.pb.h  config.proto  trace.options  trace.pb.c  trace.pb.h  trace.proto
firmware/common/protocol/: frameCodec.hpp  otaProtocol.cpp  otaProtocol.hpp
firmware/common/utils/: crc32.hpp
firmware/domes/: CMakeLists.txt  OTA_NEXT_STEPS.md  partitions.csv  sdkconfig.defaults
firmware/domes/components/nanopb_idf/: CMakeLists.txt
firmware/domes/main/: CMakeLists.txt  Kconfig.projbuild  config.hpp  main.cpp  secrets.hpp.example
firmware/domes/main/audio/: beep_data.inc
firmware/domes/main/config/: configCommandHandler.cpp  configCommandHandler.hpp  configProtocol.hpp  featureManager.cpp  featureManager.hpp  modeManager.cpp  modeManager.hpp
firmware/domes/main/drivers/: drv2605l.hpp  injectableTouchDriver.hpp  ledStrip.hpp  led_strip.hpp  lis2dw12.hpp  max98357a.hpp  touchDriver.hpp
firmware/domes/main/game/: gameEngine.cpp  gameEngine.hpp
firmware/domes/main/infra/: crashDumpHandler.cpp  crashDumpHandler.hpp  diagnostics.cpp  diagnostics.hpp  logging.hpp  memoryProfiler.cpp  memoryProfiler.hpp  nvsConfig.cpp  nvsConfig.hpp  smokeTest.hpp  taskConfig.hpp  taskManager.cpp  taskManager.hpp  watchdog.cpp  watchdog.hpp
firmware/domes/main/interfaces/: iAudioDriver.hpp  iConfigStorage.hpp  iHapticDriver.hpp  iImuDriver.hpp  iLedDriver.hpp  iOtaManager.hpp  iTaskRunner.hpp  iTouchDriver.hpp  iWifiManager.hpp  i_led_driver.hpp
firmware/domes/main/services/: audioService.hpp  espNowProtocol.hpp  espNowService.cpp  espNowService.hpp  githubClient.cpp  githubClient.hpp  imuService.hpp  ledService.hpp  otaManager.cpp  otaManager.hpp  touchService.hpp  wifiManager.cpp  wifiManager.hpp
firmware/domes/main/trace/: traceApi.hpp  traceBuffer.cpp  traceBuffer.hpp  traceCommandHandler.cpp  traceCommandHandler.hpp  traceEvent.hpp  traceHooks.cpp  traceProtocol.hpp  traceRecorder.cpp  traceRecorder.hpp  traceStreamServer.cpp  traceStreamServer.hpp  traceStrings.hpp
firmware/domes/main/transport/: bleOtaService.cpp  bleOtaService.hpp  espNowTransport.cpp  espNowTransport.hpp  serialOtaReceiver.cpp  serialOtaReceiver.hpp  tcpConfigServer.cpp  tcpConfigServer.hpp  tcpTransport.cpp  tcpTransport.hpp  usbCdcTransport.cpp  usbCdcTransport.hpp
firmware/domes/main/utils/: ledAnimator.hpp  mutex.hpp  rgbPatternController.hpp
firmware/host/: CMakeLists.txt
firmware/host/main/: bleOtaSender.cpp  simpleOtaSender.cpp
firmware/host/transport/: bleTransport.cpp  bleTransport.hpp  serialTransport.cpp  serialTransport.hpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
firmware/main/config/: constants.hpp
firmware/main/interfaces/: iAudioDriver.hpp  iHapticDriver.hpp  iImuDriver.hpp  iLedDriver.hpp  iTouchDriver.hpp
firmware/main/platform/: pins.hpp  pinsDevkit.hpp  pinsPcbV1.hpp
firmware/main/utils/: expected.hpp  mutex.hpp
firmware/test/: CMakeLists.txt  test_main.cpp
firmware/test/host/: .gitignore  CMakeLists.txt  Makefile  test_color.cpp  test_constants.cpp  test_expected.cpp  test_main.cpp
firmware/test_app/: CMakeLists.txt  CMakeLists_standalone.txt  README.md  sdkconfig.defaults
firmware/test_app/main/: CMakeLists.txt  generate_trace.cpp  test_config_protocol.cpp  test_crc32.cpp  test_feature_manager.cpp  test_frame_codec.cpp  test_game_engine.cpp  test_main.cpp  test_main_standalone.cpp  test_mode_manager.cpp  test_multi_pod_sim.cpp  test_ota_protocol.cpp  test_sim_drill.cpp  test_version_parser.cpp
firmware/test_app/sim/: drillOrchestrator.hpp  hostTraceBuffer.cpp  perfettoExporter.hpp  podCommandHandler.hpp  podInstance.hpp  simAudioDriver.hpp  simConfigStorage.hpp  simEspNowBus.hpp  simImuDriver.hpp  simLedDriver.hpp  simLog.hpp  simOrchestrator.hpp  simProtocol.hpp  simTouchDriver.hpp
firmware/test_app/stubs/: esp_err.h  esp_log.h  esp_timer.h  trace_stubs.cpp
firmware/test_app/stubs/freertos/: FreeRTOS.h  ringbuf.h  task.h
hardware/: AGENTS.md  BOM.csv  CLAUDE.md
hardware/devboard/: ENGINEERING_SPEC.md  OUTSOURCING_SPEC.md
hardware/nff-devboard/: BRING_UP_CHECKLIST.md  README.md
ios/domes_app/: .metadata  README.md  pubspec.yaml
research/: AI_DEVELOPMENT_RECOMMENDATIONS.md  DEVELOPMENT_ROADMAP.md  ID_REQUIREMENTS.md  PLAN.md  SOFTWARE_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
research/architecture/: 00-getting-started.md  01-project-structure.md  02-build-system.md  03-driver-development.md  04-communication.md  05-game-engine.md  06-testing.md  07-debugging.md  08-ota-updates.md  09-reference.md  10-host-simulation.md  10-master-election.md  11-clock-sync.md  11-system-modes.md  12-multi-pod-orchestration.md  12-system-policies.md  13-validation-test-hooks.md  ARCHITECTURE_REVIEW.md  README.md  trace-overhaul-architecture.md
research/archive/: DEVELOPMENT_ROADMAP.md  README.md
scripts/: verify.sh
tools/: .gitignore  README.md  gen_results_svg.py  gen_timeline_svg.py  test_config.py  test_config_wifi.py
tools/domes-cli/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
tools/trace/: requirements.txt  trace_dump.py  trace_merge.py  trace_names.json
(+131 files in other folders)
