idf_component_register(
    SRCS
        "main.cpp"
        "infra/watchdog.cpp"
        "infra/nvsConfig.cpp"
        "infra/taskManager.cpp"
        "services/wifiManager.cpp"
        "services/githubClient.cpp"
        "services/otaManager.cpp"
        "transport/usbCdcTransport.cpp"
        "transport/serialOtaReceiver.cpp"
        "transport/bleOtaService.cpp"
        "trace/traceBuffer.cpp"
        "trace/traceRecorder.cpp"
        "trace/traceHooks.cpp"
        "trace/traceCommandHandler.cpp"
        "config/featureManager.cpp"
        "config/configCommandHandler.cpp"
    INCLUDE_DIRS
        "."
        "interfaces"
        "drivers"
        "infra"
        "services"
        "utils"
        "transport"
        "trace"
        "config"
    REQUIRES
        driver
        esp_timer
        led_strip
        nvs_flash
        esp_system
        esp_wifi
        esp_netif
        esp_http_client
        esp_https_ota
        json
        app_update
        mbedtls
        common
        bt
)
